# nsi-aggregator-proxy

./: .gitignore  CLAUDE.md  Dockerfile  README.md  aggregator_proxy.env  pyproject.toml
.github/workflows/: ci.yml  container.yml
aggregator_proxy/: __init__.py  auth.py  dependencies.py  logging_config.py  main.py  mcp_server.py  models.py  nsi_client.py  reservation_store.py  settings.py  state_mapping.py
aggregator_proxy/nsi_soap/: __init__.py  builder.py  namespaces.py  parser.py
aggregator_proxy/routers/: nsi_callback.py  reservations.py
chart/: .values.yaml.swp  Chart.yaml  values.yaml
chart/templates/: NOTES.txt  _helpers.tpl  hpa.yaml  httproute.yaml  ingress.yaml  service.yaml  serviceaccount.yaml  statefulset.yaml
chart/templates/tests/: test-connection.yaml
docs/superpowers/plans/: 2026-05-20-mcp-reservations-endpoint.md
docs/superpowers/specs/: 2026-05-20-mcp-reservations-endpoint-design.md
tests/: conftest.py  test_auth.py  test_build_query_notification_sync.py  test_builders.py  test_error_event_dedup.py  test_format_helpers.py  test_get_reservations.py  test_logging_config.py  test_mcp_auth.py  test_mcp_integration.py  test_mcp_routes.py  test_models.py  test_nsi_callback.py  test_parse.py  test_provision.py  test_query_notification_parser.py  test_query_parser.py  test_query_recursive_parser.py  test_query_result_parser.py  test_refresh_derivation.py  test_release.py  test_reserve.py  test_root_path.py  test_schema_validation.py  test_settings.py  test_soap_action_headers.py  test_state_mapping.py  test_terminate.py
